# tabular-dl

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
doc/: embeddings.csv
notebooks/: census_example.ipynb
