[tool.poetry]
name = "tabular-dl"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
scikit-learn = "^1.1.1"
pytorch-tabnet = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "*"
ipython = "^8.3.0"
black = "^22.3.0"
jupytext = "^1.13.8"
jupyterlab = "^3.4.2"
python-lsp-server = "^1.4.1"
jupyter-console = "^6.4.3"
flake8 = "^4.0.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true

